import abc


class MessageContent(abc):
    pass
